# FRC_Workbench

FRC_Workbench_v4/: LICENSE  README.md  pyproject.toml  requirements.txt  run_workbench.py
FRC_Workbench_v4/_napari_config/: settings.yaml
FRC_Workbench_v4/legacy/: FRC_Batch_main.py  RSE_RSP_GUI.py  SR_and_FRC.py  batch_frc_cli.py  batch_frc_gui.py  csv2pairs_gui.py
FRC_Workbench_v4/scripts/: launch_frc_workbench.py
FRC_Workbench_v4/src/frc_workbench/: __init__.py  app.py  napari.yaml
FRC_Workbench_v4/src/frc_workbench/batch/: __init__.py  batch_frc_gui.py  csv2pairs_gui.py
FRC_Workbench_v4/src/frc_workbench/core/: __init__.py  batch_frc_log.py  csv2pairs_backend.py  diagnostics.py  frc_analysis.py  frc_backend.py  io.py  reference.py  roi.py
FRC_Workbench_v4/src/frc_workbench/gui/: __init__.py  mpl_canvas.py  workbench_widget.py  workbench_widget_bak.py  workers.py
FRC_Workbench_v4/src/frc_workbench/tools/: __init__.py  frc_map_nm_post.py
FRC_Workbench_v4/tests/: test_frc_diagnostics.py  test_frc_smoke.py  test_roi_mask.py
